@@ -7,6 +7,8 @@ ebus Daemon (ebusd) - ChangeLog
 * Fix daemon crash when telnet command window closed without quit signal.
 * Split dat (date) decode format into bda (bcd) and hda (hex).
 * Split tim (time) decode format into bti (bcd) and hti (hex).
+* Add internal buffer for cyc data, so cyc commands can be used like get/set
+  to fetch last data.
 
 2013-02-16:
 * Structure for commands improved so only one structure for GET/SET/CYC is needed
